a-x to the images.  Digua sample introduced to "What Is" document.

--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -33,7 +33,7 @@ f.additionalLinks = ''
 </script>
 <style>
   .figure-wide { margin-right: 10%; }
-ruby { font-size: 50px; color: rgb(102, 102, 102); font-family: "ms mincho", stsong, 'lisong pro';  }
+ruby { font-size: 50px; color: rgb(102, 102, 102); font-family: "Abyssinica SIL", "ms mincho", stsong, 'lisong pro';  }
 .diret_difat {
   position: relative;
   top: 0px;
