--- a/zaima/ZaimaUseCases.html
+++ b/zaima/ZaimaUseCases.html
@@ -47,7 +47,7 @@ f.additionalLinks = ''
 .rubyExample { font-size: 50px; font-family: "Abyssinica SIL"; margin: 0; }
 .el { color: #D61B1B; font-size: 100%; font-weight: 400; margin: 0 2px; }
 .nowrap { white-space:nowrap; }
-ruby { font-size: 50px; color: rgb(102, 102, 102); font-family: "ms mincho", stsong, 'lisong pro';  }
+ruby { font-size: 50px; color: rgb(102, 102, 102); font-family: "Abyssinica SIL", "ms mincho", stsong, 'lisong pro';  }
 
 .codeExample { margin:0 0 0 7.5%; width: 60%; }
 .codeExample figure { margin:0; }
