Section heading added for sample image and text.

--- a/zaima/WhatIsZaima.html
+++ b/zaima/WhatIsZaima.html
@@ -189,12 +189,19 @@ abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interl
   </p>
   </section>
 
-<p><em>[TBD: Finish dereferencing data in tooltips ]</em></p>
+  <section>
+  <h3 id="components-sample"><a href="#components-sample">Sample from The Digua (ድጓ)</a></h3>
+  <p>The components of zaima are depicted in the following exert from The Digua</p>
+  <p><em>[TBD: Finish dereferencing data in tooltips ]</em></p>
+
+<!-- use the technique here to present te haleita in a popup: https://jsfiddle.net/hwsamuel/fsp5pgqw/ -->
 
 <div>
 <div style="margin-left: 80px; margin-right: 160px; float:left; height: 800px">
   <figure>
-   <p><img style="vertical-align:top;" src="images/DiguaPage5-Sample.jpg" width="500px"></p>
+   <p style="border: 1px solid black; width: 500px;">
+   <img style="vertical-align:top;" src="images/DiguaPage5-Sample.jpg" width="500px" style="border: black 1px solid;">
+   </p>
    <figcaption>Digua Page 5 Sample.</figcaption>
   </figure>
 </div>
@@ -219,6 +226,7 @@ abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interl
 </div>
 </div>
 </div>
+</section>
 </section>
 
 
