--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -235,8 +235,8 @@ then specific tags where needed for a given practice.]</em></p>
 <h3>&lt;chant&gt;</h3>
 <p>"chant" is suggested over a more specific, ruby-like, "zaima" to keep the tag general purpose for chant</p>
 <section>
-<h4>context - attribute</h4>
-<p> arbitrary text value, but needs to be easily selectable in css, js, etc.</p>
+<h4>class - attribute</h4>
+<p> taken from Ruby markup. arbitrary text value, but needs to be easily selectable in css, js, etc.</p>
 </section>
 </section>
 
