Changed description for Model link.

--- a/zaima/index.html
+++ b/zaima/index.html
@@ -53,7 +53,7 @@ f.additionalLinks = ''
   </li>
   <li class="w3">
     <p class="link"><a href="ZaimaModel.html">Applying the Ruby Model to Zaima</a></p>
-    <p class="desc">A model for Zaima that builds upon W3C standards for Ruby annotation..</p>
+    <p class="desc">A model for Zaima that builds upon W3C standards for Ruby annotation and addresses general chant to support other traditions.</p>
   </li>
   <li class="w3">
     <p class="link"><a href="ZaimaUseCases.html">Zaima Use Cases</a></p>
