Expanded sample in markup.

--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -241,8 +241,8 @@ then specific tags where needed for a given practice.]</em></p>
 </section>
 
 <section>
-<h3>&lt;base&gt;</h3>
-<p>"base" is suggested over a more specific, ruby-like, "zb" to keep the tag general purpose for chant</p>
+<h3>&lt;cbase&gt;</h3>
+<p>"cbase" for "chant base" (&lt;base&gt; is defined for another context in HTML) is suggested over a more specific, ruby-like, "zb" to keep the tag general purpose for chant</p>
 </section>
 
 <section>
@@ -274,7 +274,61 @@ then specific tags where needed for a given practice.]</em></p>
 
 <section>
 <h3>Sample</h3>
-<p><em>[TBD: Markup the "What is Zaima?" sample here.]</em></p>
+<div style="margin-left: 7.5%;">
+  <figure>
+   <p style="border: 1px solid black; width: 500px;">
+   <img style="vertical-align:top;" src="images/DiguaPage5-Sample.jpg" width="500px" style="border: black 1px solid;">
+   </p>
+   <figcaption>Digua Page 5 Sample.</figcaption>
+  </figure>
+</div>
+<div style="margin: 7.5%;">
+<script type="text/plain">
+<style>
+.rubricate { color: #8a0707; }
+</style>
+<div id="sample-container">
+<div id="left-margin" style="float:left; width: 200px;">
+</div>
+<div id="left-margin" style="float: right; width: 800px;">
+<chant class="geez">  <!-- all notation will be in Ge'ez mode, setting class to something else in a notation tag would override the value here -->
+  <beit>
+    <marker>ዑ</marker><dfn>TBD</dfn>
+    <haleita><marker>በ<span class="rubricate">፬</span></marker><dfn>TBD</dfn></haleita>
+    <cbase>ወ</cbase><notation>᎑</notation>ነ<cbase>ገረ</cbase><notation>ወቃ</notation>፡ስም<cbase>የ</cbase><notation>᎐</notation>፡ዮሐን<cbase>ስ</cbase><notation style="text-align: right;">ር</notation>፡ወይ<cbase>ቢ</cbase><notation>ሊ</notation>፡<cbase>ር</cbase><notation>ሀየ</notation>ኢ<br/>
+    <medgam href="#ng1"><marker>፪</marker><cbase>ኩ</cbase><notation>ዋ᎙</notation>፡መን<cbase>ፈ</cbase><notation>ሊ</notation>ስ፡ቅ<cbase>ዱ</cbase><notation>᎖</notation><cbase>ስ</cbase><notation>ነቢ</notation>፡
+  <notationGroup id="ng1">
+    <group><cbase>ከ</cbase><notation>᎑</notation><cbase>መ</cbase><notation>፡</notation></group>
+    <group><cbase>ከ</cbase><notation>ቡር</notation><cbase>መ</cbase><notation>᎖᎔</notation></group>
+  </notationGroup>
+  ፡<cbase>ር</cbase><notation>᎔</notation>ግብ፡<cbase>ወ</cbase><notation>᎑</notation>ረ<cbase>ደ</cbase><notation>ሉ᎙</notation>፡ክ<br/>
+    ማ<cbase>ሁ</cbase><notation>ወቃ</notation>፡ኮ<cbase>ነ</cbase><notation>᎐</notation>፡በቢታን<cbase>ያ</cbase><notation>ር</notation>፡ደ<cbase>ጋ</cbase><notation>ሊ</notation>፡ወ<cbase>ድ</cbase><notation>ሊ </notation>ድቅ<cbase>ስ</cbase><notation>ዋ᎙</notation>፡ዘፈ<br/>
+    የ<cbase>ሱ</cbase><notation>᎓</notation><cbase>ስ</cbase><notation>ሠ</notation>፡ክርስ<cbase>ቶ</cbase><notation>ሊ </notation>ስ፡<cbase>ኮ</cbase><notation>᎖</notation><cbase>ነ</cbase><notation>ነቢ </notation>፡እስ<cbase>መ</cbase><notation>ከመ</notation>፡እም<cbase>ተ</cbase><notation>᎖</notation><cbase>ረ</cbase><notation>᎘</notation>ፈ፡<br/>
+  </beit>
+  <beit>
+    <marker>ሮ</marker><dfn>አፍቂሮ፡</dfn>
+    ዚአ<cbase>ሁ</cbase><notation>ዓለ᎙</notation>፡ነ<cbase>ሣ</cbase><notation>᎑</notation>እ<cbase>ነ</cbase><notation>ቃ</notation>፡<cbase>ደ</cbase><notation>᎑</notation><cbase>ጋ</cbase><notation>ብራ</notation>፡በ<cbase>ዲ</cbase><notation>᎐</notation><cbase>በ</cbase><notation>᎖</notation>፡ደ<cbase>ጋ</cbase><notation>ረየ</notation>፡<haleita><marker>በ<span class="rubricate">፪</marker><dfn></dfn></haleita>ካ<cbase>ህ</cbase><notation>ቡር</notation>ን፡<cbase>ወ</cbase><notation>ዘቦ</notation><br/>
+    ነቢ<cbase>ይ</cbase><notation>ሰ</notation>፡ወን<cbase>ጌ</cbase><notation>᎑</notation>ላ<cbase>ዊ</cbase><notation>ው</notation>፡<cbase>መ</cbase><notation></notation>ጥምቅ፡<sereyu><abbr><cbase>ቃ</cbase></abbr><notation>፴</notation><abbr>ለ</abbr>፡ዓ<abbr>ዋ<cbase>ዲ</cbase></abbr><notation><marker>ረዩ</marker></notation><dfn>ቃለ&#x22ef;ዋዲ</dfn></sereyu>፡<br/>
+    ዘይ<cbase>ሰ</cbase><notation>ይ</notation>ብክ፡በ<cbase>ገ</cbase><notation>᎐</notation>ደ<cbase>ም</cbase><notation>ር</notation>፡<haleita><marker>በ<span class="rubricate">፪</span><dfn></dfn></haleita>ካ<cbase>ህ</cbase><notation>᎑</notation><cbase>ን</cbase><notation>ባኡ᎙</notation>፡ወነ<cbase>ቢ</cbase><notation>᎖</notation>ይ</cbase><notation>ጸል</notation>፡<br/>
+    ወን<cbase>ጌ</cbase><notation>ቡር</notation>ላ<cbase>ዊ</cbase><notation>ነነ</notation>፡<cbase>መ</cbase><notation>᎐</notation>ጥም<cbase>ቀ</cbase><notation>ሉ᎙</notation>፡ቃ<cbase>ለ</cbase><notation>᎐</notation>፡ዓዋ<cbase>ዲ</cbase><notation>ዚና</notation>፡ዘይስ<br/>
+  </beit>
+  <beit>
+    <marker>ዘዮ</marker><dfn>ዘዮም፡መስቀል፡</dfn>
+    <cbase>ብ</cbase><notation>᎐</notation>ክ፡በንደ<cbase>ም</cbase><notation>ር</notation>፡<haleita><marker>በ<span class="rubricate">፪</span></marker><dfn></dfn></haleita><cbase>ካ</cbase><notation>᎑</notation><cbase>ህን</cbase><notation>ብራ</notation>፡<cbase>ወ</cbase><notation>᎐</notation><cbase>ነ</cbase><notation>᎖</notation>ቢይ</cbase><notation>ነየ</notation>፡ወን<cbase>ጌ</cbase><notation>᎑</notation><br/>
+    ላ<cbase>ዊ</cbase><notation>ው</notation>፡<cbase>መ</cbase><notation>᎑</notation>ጥም<cbase>ቀ</cbase><notation>ው</notation>፡<cbase>ቃ</cbase><notation>ከመ </notation>ለ፡<cbase>ዓ</cbase><notation>᎖</notation>ዋ<cbase>ዲ</cbase><notation>ንጋ</notation>፡ዘይ<cbase>ሰ</cbase><notation>ብራ</notation>ብክ፡<cbase>በ</cbase><notation>᎐</notation>ገ<br/>
+  </beit>
+  <beit>
+    <marker>ጣ</marker><dfn>ዕጣነ፡ሞገር፡ወደሞ፡ክቡረ፡</dfn>
+    ደ<cbase>ም</cbase><notation>ኔሃ</notation>፡<haleita><marker>በ<span class="rubricate">፪</span></marker><dfn>TBD</dfn></haleita></div>ዮ<cbase>ሐን</cbase><notation>ይሠ </notation>ስ፡<cbase>ክ</cbase><notation>᎓</notation><cbase>ቡር</cbase><notation style="text-align: right;">ንከ᎖</notation>፡አር<cbase>ኩ</cbase><notation>ነዋ</notation>፡ሰመር<br/>
+    <cbase>ዓ</cbase><notation>᎐</notation><cbase>ዊ</cbase><notation>ግዑ </notation>፡ዮ<cbase>ሐ</cbase><notation>᎔</notation>ን<cbase>ስ</cbase><notation>ርሡ </notation>፡ብእ<cbase>ሲ</cbase><notation>᎔</notation>፡ወንጌላ<cbase>ዊ</cbase><notation>ር</notation>፡<cbase>ዮ</cbase><notation>᎑</notation><cbase>ሐን</cbase><notation>አጻ</notation>ስ፡<br/>
+    ወአዝ<cbase>ማ</cbase><notation>᎑</notation><cbase>ዱ</cbase><notation>፴</notation>፡ዘሥ<cbase>ጋ</cbase><notation>᎖</notation>፡ተስም<cbase>የ</cbase><notation>ሰን </notation>፡ዮ<cbase>ሐ</cbase><notation>ይሠ</notation>ንስ፡<cbase>አ</cbase><notation>᎐</notation><br/>
+    ጥመ<cbase>ቶ</cbase><notation>ዚኦ </notation>፡ዮ<cbase>ሐ</cbase><notation>᎑</notation><cbase>ን</cbase><notation>᎒</notation>ስ፡ለ<cbase>ኢ</cbase><notation>᎐</notation>የሱ<cbase>ስ</cbase><notation>ዑ</notation>፡ዮ<cbase>ሐ</cbase><notation>ፒር</notation><cbase>ንስ</cbase><notation>ርሡ</notation>፡ወ
+  </beit>
+</chant>
+</div>
+</div>
+</script>
+</div>
 </section>
 
 </section>
